[CSS] Fix `pre` element overflow
`overflow-x` property is affected by parent node width.

--- a/gitiles-servlet/src/main/resources/com/google/gitiles/static/base.css
+++ b/gitiles-servlet/src/main/resources/com/google/gitiles/static/base.css
@@ -275,6 +275,7 @@ ul, ol {
 .RepoShortlog-log {
   -ms-flex: 1;
   flex: 1;
+  width: 80%;
 }
 .RepoIndexDoc {
   border-top: 1px solid #ddd;
